2004-03-08  Per Bothner  <per@bothner.com>

	* Symbol.java:  Implement Comparable, and Map.Entry, if JAVA2.
	(compareTo):   New method.

2004-01-09  Per Bothner  <per@bothner.com>

	* FluidConstraint.java (find):  Inline Future.getFluids.

	* TrivialConstraint.java (getInstance):  Minor fix,
	
	* CallContext.java (curEnvironment):  New field.
	(getEnvironment):  Rewrite to use curEnvironment.
	* Environment.java (getCurrent):  Use CallContext's getEnvironment.
	(setCurrent):  Set current CallContext's curEnvironment.
	(setGlobal):  New method.
	* Future.java (environmentr):  Renamed field to initEnvironment,
	(<init>):  Update accordingly.
	(run):  Set CallContext.curEnvironment from initEnvironment.
	
	* Environment.java (user, lookup_global, define_global, put_global):
	Call getCurrent directly.

	* Environment.java (getInstance, getSymbol, lookup, addSymbol, remove):
	Add synchronization as appropropriate.

2003-11-09  Per Bothner  <per@bothner.com>

	* CharArrayOutPort.java (toString):  New method.

2003-10-11  Per Bothner  <per@bothner.com>

	* ValueStack.java:  Extends Values instead of TreeList.

2003-10-09  Per Bothner  <per@bothner.com>

	* CallContext.java (setFluids, resetFluids):  Add synchronization, as
	syggested by jared@mercedsystems.com.	Fixes Savannah bug #5789.

	* ApplyMethodProc.java (module):  Make field public.
	* CpsMethodProc.java (module):  Make field public.

2003-10-07  Per Bothner  <per@bothner.com>

	* Procedure.java (getSymbol, setSymbol):  New methods.
	(getName):  Check for a Symbol as the name property.
	* ApplyMethodProc.java (<init>):  Name can be a Symbol or a String.
	* CpsMethodProc.java (<init):  Likewise.

	* Environment.java (setPrevious):  New method.

	* Values.java (equals):  Remove - for now use inherited method,
	which for a Value just compares identity.

2003-09-30  Per Bothner  <per@bothner.com>

	* CallContext.java (startFromContext, getFromContext,
	cleanupFromContext):  New methods. 
