@@ -194,20 +194,57 @@ public abstract class MethodProc extends ProcedureN
   /** Return the index of the most specific method. */
   public static int mostSpecific(MethodProc[] procs, int length)
   {
-    MethodProc best = null;
-    if (length == 0)
-      return -1;
-    int result = 0;
-    best = procs[0];
+    if (length <= 1) // Handles length==0 and length==1.
+      return length - 1;
+    // best is non-null if there is a single most specific method.
+    MethodProc best = procs[0];
+    // This array (which is allocated lazily) is used if there is is a set
+    // of bestn methods none of which are more specific than the others.
+    MethodProc[] bests = null;
+    // If best==null, then the index of the most specific method;
+    // otherwise the active length of the bests array.
+    int bestn = 0;
+  outer:
     for (int i = 1;  i < length;  i++)
       {
         MethodProc method = procs[i];
-        best = mostSpecific(best, method);
-        if (best == null)
-          return -1;
-        else if (best == method)
-          result = i;
+	if (best != null)
+	  {
+	    MethodProc winner = mostSpecific(best, method);
+	    if (winner == null)
+	      {
+		if (bests == null)
+		  bests = new MethodProc[length];
+		bests[0] = best;
+		bests[1] = method;
+		bestn = 2;
+		best = null;
+	      }
+	    else if (winner == method)
+	      {
+		best = method;
+		bestn = i;
+	      }
+	  }
+	else
+	  {
+	    for (int j = 0;  j < bestn;  j++)
+	      {
+		MethodProc old = bests[j];
+		MethodProc winner = mostSpecific(old, method);
+		if (winner == old)
+		  continue outer;
+		if (winner == null)
+		  {
+		    bests[bestn++] = method;
+		    continue outer;
+		  }
+	      }
+	    // At this point method is more specific than bests[0..bestn-1].
+	    best = method;
+	    bestn = i;
+	  }
       }
-    return result;
+    return best == null ? -1 : bestn;
   }
 }
