@@ -1,3 +1,8 @@
+2004-05-12  Per Bothner  <per@bothner.com>
+
+	* MethodProc.java (mostSpecific):  Handle the case that two or more
+	methods are equally specific, but a later method is more specific.
+
 2004-03-08  Per Bothner  <per@bothner.com>
 
 	* Symbol.java:  Implement Comparable, and Map.Entry, if JAVA2.
